# believe

./: .gitignore  CHAT_BRAINSTORM.md  CLAUDE.md  README.md  openapi.json  pyproject.toml  requirements.txt
.claude/skills/fix-render-deploy/: SKILL.md
.github/workflows/: build-sdks.yml  ci.yml  openapi-check.yml
app/: __init__.py  auth.py  main.py  pagination.py
app/data/: __init__.py  seed_data.py
app/middleware/: __init__.py  versioning.py
app/models/: __init__.py  characters.py  data_types.py  episodes.py  interactive.py  matches.py  quotes.py  team_members.py  teams.py  webhooks.py  websocket.py
app/routers/: __init__.py  characters.py  data_types.py  episodes.py  interactive.py  matches.py  quotes.py  streaming.py  team_members.py  teams.py  webhooks.py  websocket.py
app/services/: __init__.py  believe_engine.py  conflict_resolver.py  match_simulation.py  press_conference.py  reframe_service.py  streaming.py  webhook_service.py
scripts/: check_openapi.sh  generate_openapi.py
tests/: __init__.py  conftest.py  test_characters.py  test_data_types.py  test_episodes.py  test_imports.py  test_interactive.py  test_matches.py  test_quotes.py  test_root.py  test_streaming.py  test_teams.py  test_versioning.py  test_websocket.py
